# PumasLogistics

./: .gitignore  .gitmodules  README.md
PC_user/src/HRI/vosk_speech_recognition/: CMakeLists.txt  package.xml
PC_user/src/HRI/vosk_speech_recognition/grammars/: help_me_carry_interaction_commands.json  help_me_carry_names.json  help_me_carry_navigation_commands.json  receptionist.json  test.json
PC_user/src/HRI/vosk_speech_recognition/launch/: vosk_recog.launch
PC_user/src/HRI/vosk_speech_recognition/scripts/: speech_recognizer.py
PC_user/src/HRI/vosk_speech_recognition/srv/: speech_recog.srv
PC_user/src/Hardware/justina/arms/: CMakeLists.txt  package.xml
PC_user/src/Hardware/justina/arms/src/: bridge.cpp  move_left_arm_service.cpp
PC_user/src/Hardware/justina/arms/srv/: MoveArm.srv
PC_user/src/Hardware/justina/head/: CMakeLists.txt
PC_user/src/Hardware/justina/head/src/: head_to_centroid.cpp
PC_user/src/Hardware/justina/justina_description/justina_before/: dark_justina.xacro  justina.xacro
PC_user/src/Hardware/justina/justina_description/urdf/: justina.xacro  justina_head.xacro  justina_left_arm.xacro  justina_torso.xacro
PC_user/src/Hardware/manipulator/manipulator_control/: CMakeLists.txt  package.xml
PC_user/src/Hardware/manipulator/manipulator_control/scripts/: modelo.py  perfil_velocidades.py
PC_user/src/Hardware/manipulator/manipulator_description/: CMakeLists.txt  package.xml
PC_user/src/Hardware/manipulator/manipulator_description/config/: robot.rviz
PC_user/src/Hardware/manipulator/manipulator_description/launch/: manipulator.launch
PC_user/src/Hardware/manipulator/manipulator_description/meshes/: AluminumBase.stl  AxisX.stl  AxisY.stl  Claw.stl  Ensamble_AxisX.stl  MovingPlate.stl  NylonPulleyBearing.stl  Profile_230MM.stl  Profile_360MM.stl  Profile_70MM.stl
PC_user/src/Knowledge/knowledge_msgs/: CMakeLists.txt
PC_user/src/Knowledge/known_locations_tf_server/: CMakeLists.txt  package.xml
PC_user/src/Knowledge/known_locations_tf_server/scripts/: setbool_service_locs_tf.py
PC_user/src/Navigation/config_files/: known_locations.yaml
PC_user/src/Navigation/config_files/launch/: navigation.launch
PC_user/src/Navigation/config_files/rviz/: festino_navigation.rviz  festino_navigation_JM.rviz
PC_user/src/Planning/act_pln/: CMakeLists.txt  package.xml  storing_groseries.cpp
PC_user/src/Planning/act_pln/scripts/: festina_startup.py  panic_stop.py  step_navigation.py
PC_user/src/Planning/act_pln/src/: DemoTMR2023.cpp  GPSR.cpp  carry.cpp  carry_2.cpp  carry_my_luggage.cpp  carry_my_luggage2.cpp  carry_my_luggage_original.cpp  demo_follow.cpp  loc_goal_pub.cpp  navigation_challenge_track.cpp  random_navigation.cpp  receptionist.cpp  receptionist2.cpp  receptionist_facilito.cpp  robot_inspection.cpp  stor.cpp  storing_groseries.cpp  test.cpp  test_mvbase.cpp  test_planning_1.cpp  test_planning_2.cpp
PC_user/src/RefBoxComm/refbox_comm/: CMakeLists.txt  package.xml
PC_user/src/RefBoxComm/refbox_comm/src/: comm_twr.cpp  peer.cpp  refbox_comm_node.cpp  refbox_comm_node_austria.cpp  refbox_comm_node_dnl.cpp  refbox_comm_node_navigation.cpp  refbox_comm_node_old.cpp  refbox_comm_node_robot.cpp  robot.cpp  robot_to_main_comm_node.cpp
PC_user/src/RefBoxComm/refbox_msgs_old/: CMakeLists.txt  package.xml
PC_user/src/RefBoxComm/refbox_msgs_old/scripts/: fake_refbox.py
PC_user/src/RefBoxComm/refbox_msgs_old/src/: rb_pub_node.cpp  rb_sub_node.cpp
PC_user/src/RefBoxComm/utils/tug_cfg/: setup.py
PC_user/src/RefBoxComm/utils/tug_joy/: CMakeLists.txt
PC_user/src/Vision/face_recog/: CMakeLists.txt  package.xml
PC_user/src/Vision/face_recog/scripts/: face_train_node.py  face_train_server.py  recog_face_node.py  recog_face_server.py
PC_user/src/Vision/img_proc/: CMakeLists.txt  package.xml
PC_user/src/Vision/img_proc/msg/: MPS_Detector.msg  Tag_Detector_Previo.msg
PC_user/src/Vision/img_proc/src/: aruco_tf.cpp  aruco_tf_srv.cpp  qr_srv.cpp
PC_user/src/Vision/img_proc/srv/: Find_tag_Srv.srv  ReadQRCode.srv  Tag_with_tf.srv
PC_user/src/Vision/pose_estimation/: CMakeLists.txt  package.xml
PC_user/src/Vision/pose_estimation/launch/: pose_estimation.launch
PC_user/src/Vision/pose_estimation/msg/: Keypoint2D.msg  Keypoint3D.msg  PersonPose2D.msg  PersonPose3D.msg
PC_user/src/Vision/pose_estimation/scripts/: markers.py  yolo_pose_2d_node.py
PC_user/src/Vision/pose_estimation/src/: markers.cpp  pointing_detector_node.cpp  pose_2d_to_3d_node.cpp
PC_user/src/Vision/vision_msgs/: CMakeLists.txt
PC_user/src/Vision/vision_msgs/scripts/: kinect_clase_vision.py
PC_user/src/Vision/yolo_detect/: CMakeLists.txt  package.xml
PC_user/src/Vision/yolo_detect/launch/: yolo_detect.launch
PC_user/src/Vision/yolo_detect/scripts/: yolo_detect_node.py
PC_user/src/festino_tools/: CMakeLists.txt  package.xml
PC_user/src/festino_tools/include/festino_tools/: FestinoHRI.h  FestinoHardware.h  FestinoKnowledge.h  FestinoNavigation.h  FestinoVision.h
PC_user/src/festino_tools/src/: FestinoHRI.cpp  FestinoHardware.cpp  FestinoKnowledge.cpp  FestinoNavigation.cpp  FestinoVision.cpp
PC_user/src/surge_et_ambula/launch/: GPSR.launch  README  carry_my_luggage.launch  demo.launch  demo_follow.launch  rcll.launch  receptionist.launch  robot_inspection.launch
Robotino/: README.md
Robotino/src/Navigation/config_files/launch/: navigation.launch
Robotino/src/Navigation/config_files/maps/: lab_mar_14_2025.yaml
Robotino/src/Navigation/config_files/prohibition_maps/: BioroboticsLab-28-01-25.yaml  lab_mar_14_2025_prohibitions_map.yaml
Robotino/src/Navigation/move_base/: CMakeLists.txt  package.xml
Robotino/src/Navigation/move_base/src/: move_base.cpp
Robotino/src/Navigation/simple_move/: CMakeLists.txt  package.xml
Robotino/src/robotino/robotino_description/urdf/: robotino.urdf
Robotino/src/robotino/robotino_node/: CMakeLists.txt
Robotino/src/robotino/robotino_node/launch/: robotino_node.launch  robotino_node.launch.save  robotino_node_without_nav.launch
Robotino/src/robotino/robotino_node/src/: LaserRangeFinderROS.cpp
(+21 files in other folders)
